--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-clut1jeg1b2c73cbfksg-a.singapore-postgres.render.com:5432/rb_50pk
+spring.datasource.username=rb_50pk_user
+spring.datasource.password=wtTV8sQ13NN5jtUB7qWNIe29Wk2k6Jhd
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.view.prefix=/WEB-INF/view/
